--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
   
               <div class="bar" id="slide-in-photo">
                 <div class="info" >
-                  <img src="css/html.png">
+                  <img src="html.png">
                   <span>HTML</span>
                 </div>
               </div>
               <div class="bar" id="slide-in-photo">
                 <div class="info">
-                  <img src="css/css.png"/>
+                  <img src="css.png"/>
                   <span>CSS</span>
                 </div>
               </div>
