--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           
           <div class="box-container">
               <div class="box box1">
-                <p style="font-size:16px ;"><span > age: </span> 20</p>
+                <p style="font-size:16px ;"><span > D.O.B: </span> 16/05/2004</p>
                 <p style="font-size:16px ;"><span> phone : </span> +91 8248373849</p>
               </div>
               <div class="box box2">
@@ -186,13 +186,13 @@
   
               <div class="bar" id="slide-in-photo">
                 <div class="info" >
-                  <img src="html.png">
+                  <img src="css/html.png">
                   <span>HTML</span>
                 </div>
               </div>
               <div class="bar" id="slide-in-photo">
                 <div class="info">
-                  <img src="css.png"/>
+                  <img src="css/css.png"/>
                   <span>CSS</span>
                 </div>
               </div>
