--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>MyPortfolio(offline)</title>
+    <title>MyPortfolio</title>
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="style.css"/>
@@ -186,13 +186,13 @@
   
               <div class="bar" id="slide-in-photo">
                 <div class="info" >
-                  <img src="css/html.png">
+                  <img src="html.png">
                   <span>HTML</span>
                 </div>
               </div>
               <div class="bar" id="slide-in-photo">
                 <div class="info">
-                  <img src="css/css.png"/>
+                  <img src="css.png"/>
                   <span>CSS</span>
                 </div>
               </div>
@@ -289,7 +289,8 @@
                   </svg></a>
               </div>
           </div>
-      </div>   
+      </div>
+    
       <h1 class="credit">&copy; All Rights Reserved <i class="fa fa-heart pulse"></i> By <a href="https://www.linkedin.com/in/kani-vendhan-544127340?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> Kani Vendhan </a><p>
         Guided By SDLC - Skill Devolopment Learning Center</p></h1>
     
