--- a/index.html
+++ b/index.html
@@ -202,7 +202,12 @@
                   <span>JavaScript</span>
                 </div>
               </div>
-  
+      <div class="bar"id="slide-in-photo">
+                <div class="info">
+                  <img src="react.png"/>
+                  <span>React</span>
+                </div>
+              </div>
         </div>
   </div>
   </section>
