--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </div>
           
           <div class="resumebtn">
-              <a href="T.kani vendhan resume .pdf" target="_blank" class="btn"><span>Resume</span>
+             <a href="./T.kani vendhan resume.pdf" target="_blank" class="btn"><span>Resume</span>
                   <i class="fas fa-chevron-right"></i>
               </a>
           </div>
