--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
   </div>
   </section>
-  <section class="work" id="work">
+ <section class="work" id="work">
 
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
   
@@ -224,7 +224,7 @@
           <h3>Travel Website</h3>
           </div>
           <div class="desc">
-            <p>Travel website. Don't need much info about it, just scroll down. You're here only!</p>
+            <p>Travel website. Toch view to view the project, Touch code to view the code</p>
             <div class="btns">
               <a href="https://kanivendhan.github.io/Travel2/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
               <a href="https://github.com/kanivendhan/Travel2" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -236,26 +236,38 @@
         <img draggable="false" src="kvfurniturebanner.png" alt="" />
         <div class="content">
           <div class="tag">
-          <h3>furniture Website</h3>
+          <h3>Furniture Website</h3>
           </div>
           <div class="desc">
-            <p>furniture website. Don't need much info about it, just scroll down. You're here only!</p>
+            <p>furniture website. Toch view to view the project, Touch code to view the code</p>
             <div class="btns">
-              <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-              <a href=" " class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+              <a href="https://kanivendhan.github.io/Furnture_KV/" class="btn" target="_blank"><i
+                  class="fas fa-eye"></i> View</a>
+              <a href="https://github.com/kanivendhan/Furnture_KV" class="btn" target="_blank">Code <i
+                  class="fas fa-code"></i></a>
             </div>
           </div>
         </div>
-      </div>
-  </div>  
-  <br><br><br><br>
-  <div class="viewall">
-    <a href="https://github.com/kanivendhan" class="btn"><span>View All</span>
-      <i class="fas fa-arrow-right"></i>
-  </a>
   </div>
-  </section>
-    
+  <div class="box tilt">
+    <img draggable="false" src="Licky.PNG" alt="" />
+    <div class="content">
+      <div class="tag">
+        <h3>Icecream Website</h3>
+      </div>
+      <div class="desc">
+        <p>Icecream website. Toch view to view the project, Touch code to view the code</p>
+        <div class="btns">
+          <a href="https://kanivendhan.github.io/Licky/" class="btn" target="_blank"><i class="fas fa-eye"></i>
+            View</a>
+          <a href="https://github.com/kanivendhan/Licky" class="btn" target="_blank">Code <i
+              class="fas fa-code"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br><br><br><br>
+  </section>    
     <section class="footer">
 
       <div class="box-container">
