--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a href="contact.html" class="header__link"> Contact </a>
             </li>
           </ul>
-          <div class="header__main-ham-menu-cont">
+<!--           <div class="header__main-ham-menu-cont">
             <img onclick="showSidebar()"
               src="ham-menu.svg"
               alt="hamburger menu"
@@ -59,7 +59,7 @@
               src="ham-menu-close.svg"
               alt="hamburger menu close"
               class="header__main-ham-menu-close d-none"/>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="header__sm-menu">
