--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>MyPortfolio</title>
     <meta name="description" content="Portfolio Template for Developer" />
-
     <link rel="stylesheet" href="style.css"/>
     <source src="index.js" type="">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -49,7 +48,7 @@
               <a href="contact.html" class="header__link"> Contact </a>
             </li>
           </ul>
-<!--           <div class="header__main-ham-menu-cont">
+          <!-- <div class="header__main-ham-menu-cont">
             <img onclick="showSidebar()"
               src="ham-menu.svg"
               alt="hamburger menu"
@@ -117,7 +116,7 @@
           </div>
           
           <div class="resumebtn">
-             <a href="./T.kani vendhan resume.pdf" target="_blank" class="btn"><span>Resume</span>
+              <a href="./T.kani vendhan resume.pdf" target="_blank" class="btn"><span>Resume</span>
                   <i class="fas fa-chevron-right"></i>
               </a>
           </div>
@@ -202,7 +201,7 @@
                   <span>JavaScript</span>
                 </div>
               </div>
-      <div class="bar"id="slide-in-photo">
+                 <div class="bar"id="slide-in-photo">
                 <div class="info">
                   <img src="react.png"/>
                   <span>React</span>
@@ -211,10 +210,10 @@
         </div>
   </div>
   </section>
- <section class="work" id="work">
+  <section class="work" id="work">
 
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
-  <br><br>
+  
     <div class="box-container">
   
       <div class="box tilt">
@@ -266,8 +265,43 @@
       </div>
     </div>
   </div>
+   <div class="box tilt">
+     <img draggable="false" src="shampoo.png" alt="" />
+     <div class="content">
+       <div class="tag">
+         <h3>Soap & Shampoo website</h3>
+       </div>
+       <div class="desc">
+         <p>Soap & Shampoo website. Toch view to view the project, Touch code to view the code</p>
+         <div class="btns">
+           <a href=" https://kanivendhan.github.io/s-h/" class="btn" target="_blank"><i class="fas fa-eye"></i>
+             View</a>
+           <a href="https://github.com/kanivendhan/s-h" class="btn" target="_blank">Code <i
+               class="fas fa-code"></i></a>
+         </div>
+       </div>
+     </div>
+   </div>
+    <div class="box tilt">
+      <img draggable="false" src="travel.png" alt="" />
+      <div class="content">
+        <div class="tag">
+          <h3>Tour and Travel</h3>
+        </div>
+        <div class="desc">
+          <p>Tour and Travel. Toch view to view the project, Touch code to view the code</p>
+          <div class="btns">
+            <a href=" https://kanivendhan.github.io/TourandTravel/" class="btn" target="_blank"><i class="fas fa-eye"></i>
+              View</a>
+            <a href="https://github.com/kanivendhan/TourandTravel" class="btn" target="_blank">Code <i
+                class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
   <br><br><br><br>
-  </section>    
+  </section>
+    
     <section class="footer">
 
       <div class="box-container">
