--- a/index.html
+++ b/index.html
@@ -201,12 +201,30 @@
                   <span>JavaScript</span>
                 </div>
               </div>
-                 <div class="bar"id="slide-in-photo">
+              <div class="bar"id="slide-in-photo">
                 <div class="info">
                   <img src="react.png"/>
-                  <span>React</span>
+                  <span>React jS</span>
                 </div>
               </div>
+               <div class="bar" id="slide-in-photo">
+                 <div class="info">
+                   <img src="nodejs.png" />
+                   <span>Node JS</span>
+                 </div>
+               </div>
+                <div class="bar" id="slide-in-photo">
+                  <div class="info">
+                    <img src="express-js.png" />
+                    <span>Express JS</span>
+                  </div>
+                </div>
+                 <div class="bar" id="slide-in-photo">
+                   <div class="info">
+                     <img src="mongodb.png" />
+                     <span>MongoDB</span>
+                   </div>
+                 </div>
         </div>
   </div>
   </section>
